--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'com.google.gms.google-services'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.0"
+    useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.rizkyghofur.monitorhewan"
         minSdkVersion 16
