--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.github.lecho:hellocharts-library:1.5.8@aar'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.android.support:support-v4:29.1.0'
 }
